# gssapi

./: .gitignore  .travis.yml  ChangeLog.md  README.md  Test.hs  gssapi.cabal  haskell-gssapi.cabal
Network/Security/: Kerberos.hs
clib/: hkrb5.c  hkrb5.h
examples/: Main.hs  haskell-gssapi-test.cabal  stack.yaml
src/Network/Security/: GssApi.hs  GssTypes.hsc  Kerberos.hs
src/Network/Wai/Middleware/: GssAuth.hs  SpnegoAuth.hs
