name:                gssapi
version:             0.1.0.0
synopsis:            libgssapi bindings for haskell
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ondrej Palkovsky
maintainer:          palkovsky.ondrej@gmail.com
copyright:           Ondrej Palkovsky
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- exposed-modules:     Network.Security.Kerberos, Network.Security.GssApi
  -- c-sources:           clib/hkrb5.c
  -- includes:            clib/hkrb5.h
  exposed-modules:     Network.Security.GssApi
  other-modules:       Network.Security.GssTypes
  build-depends:       base >=4.8 && <4.9, bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
  extra-libraries:     gssapi_krb5
  hs-source-dirs:      src

executable test
  build-depends:       base >=4.8 && <4.9, gssapi, bytestring
  main-is:             Test.hs
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -threaded
  default-language:    Haskell2010
