name:                haskell-gssapi-test
version:             0.1.0.0
synopsis:            Test web server from gssapi
-- description:
license:             BSD3
author:              Ondrej Palkovsky
maintainer:          palkovsky.ondrej@gmail.com
copyright:           Ondrej Palkovsky
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable test
  build-depends:       base >=4.8 && <4.10, haskell-gssapi, bytestring,
                       resourcet, transformers, warp, wai, http-types,
                       case-insensitive, base64-bytestring, warp-tls,
                       vault
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -threaded
  default-language:    Haskell2010
